app/pipelines/pipeline-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dotnetapp
  name: dotnetapp
  namespace: delta
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: dotnetapp
    deploymentconfig: dotnetapp
  sessionAffinity: None
  type: ClusterIP
