app/pipelines/pipeline-delta-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: dotnetapp
  name: dotnetapp
  namespace: delta
spec:
  port:
    targetPort: 8080-tcp // must match Service name
  tls:
    termination: edge
  to:
    kind: Service
    name: dotnetapp
    weight: 100
  wildcardPolicy: None
